# kbot-py-client

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  renovate.json  ruff.toml  setup.py
.github/workflows/: build_deploy.yaml  test_build_deploy.yaml
examples/: chatbot.py
kbot_client/: callback_chat.py  chat_client.py  client.py  client_group.py  test.py
