[project]
name = "kbot-py-client"
version = "2.1.3"
requires-python = ">=3.10"
description = "Client for Konverso Kbot."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Konverso", email = "contact@konverso.ai" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://www.konverso.ai/"
Source = "https://github.com/konverso-ai/kbot-py-client"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kbot_client"
module-root = ""

[dependency-groups]
lint = [
    "pylint>=4.0.1",
    "ruff==0.14.1",
]
